--- a/src/components/middle/AudioPlayer.scss
+++ b/src/components/middle/AudioPlayer.scss
@@ -38,46 +38,44 @@
   }
 
   @media (max-width: 600px) {
-    @media (max-width: 600px) {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    height: 3.25rem;
+    overflow: hidden;
+    box-shadow: 0 1px 2px rgba(114, 114, 114, 0.25);
+
+    display: flex;
+    padding: 0.375rem 0.5rem;
+    background: var(--color-background);
+
+    &-content {
+      padding: 0;
+      flex-grow: 1
+    }
+
+    &::before {
+      content: "";
+      display: block;
       position: absolute;
-      top: 100%;
+      top: -2px;
       left: 0;
       right: 0;
-      height: 3.25rem;
-      overflow: hidden;
-      box-shadow: 0 1px 2px rgba(114, 114, 114, 0.25);
+      height: 2px;
+      box-shadow: 0 0 2px rgba(114, 114, 114, 0.25);
+    }
 
-      display: flex;
-      padding: 0.375rem 0.5rem;
-      background: var(--color-background);
+    > .Button {
+      margin: 0;
+    }
 
-      &-content {
-        padding: 0;
-        flex-grow: 1
-      }
+    > .toggle-play {
+      margin-right: 0.5rem;
+    }
 
-      &::before {
-        content: "";
-        display: block;
-        position: absolute;
-        top: -2px;
-        left: 0;
-        right: 0;
-        height: 2px;
-        box-shadow: 0 0 2px rgba(114, 114, 114, 0.25);
-      }
-
-      > .Button {
-        margin: 0;
-      }
-
-      > .toggle-play {
-        margin-right: 0.5rem;
-      }
-
-      > .player-close {
-        margin-left: auto;
-      }
+    > .player-close {
+      margin-left: auto;
     }
   }
 
