--- a/src/components/right/Profile.scss
+++ b/src/components/right/Profile.scss
@@ -94,6 +94,7 @@
 
   .TabList {
     background: #fff;
+    top: -1px;
     .Tab {
       padding: .6875rem .25rem;
       i {
