--- a/src/components/right/RightColumn.scss
+++ b/src/components/right/RightColumn.scss
@@ -33,7 +33,7 @@
   }
 
   > .Transition {
-    height: calc(100% - var(--header-height));
+    height: calc(var(--vh, 1vh) * 100 - var(--header-height));
   }
 }
 
