--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -140,4 +140,6 @@ $color-selection: #3993fb;
 
   --layer-transition: .35s cubic-bezier(0.33, 1, 0.68, 1);
   --layer-blackout-opacity: .35;
+
+  --vh: 1vh;
 }
