--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,6 +24,9 @@ html, body {
   font-family: Roboto, system-ui, "Apple Color Emoji", sans-serif;
   color: var(--color-text);
   overflow: hidden;
+  @media (max-width: 600px) {
+    height: calc(var(--vh, 1vh) * 100);
+  }
 }
 
 body.scrollable {
@@ -34,6 +37,9 @@ body.scrollable {
   height: 100%;
   max-width: 1680px;
   margin: 0 auto;
+  @media (max-width: 600px) {
+    height: calc(var(--vh, 1vh) * 100);
+  }
 }
 
 #middle-column-portals,
